<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/login">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="150dp"
            android:background="@color/Login">
        <TextView
                android:text="@string/Lusuario"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Tusuario"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_margin="10dp"
                android:textColor="@color/Blanco"
                android:id="@+id/ETUsuario" style="@android:style/Widget.Material.EditText" android:text="Lubin"/>
        <TextView
                android:text="@string/Lcontrasena"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Tcontrasena"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:layout_margin="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/ETConstrana"
                android:layout_margin="10dp"
                android:textColor="@color/Blanco" android:text="DesMovil1p"/>
        <Button
                android:text="@string/Laceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LAceptar"
                android:layout_margin="30dp"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
                android:text="@string/Lcancelar"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LCancelar"

                style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</LinearLayout>